<resources>
    <string name="app_name">WhiteBook</string>
    <string name="app_style">主题</string>
    <string name="navigation_drawer_open">打开</string>
    <string name="navigation_drawer_close">关闭</string>

    <string name="app_send_log">发送日志</string>
    <string name="home_page">首页</string>
    <string name="about">关于</string>
    <string name="bookmarks">书签</string>
    <string name="tools">工具</string>
    <string name="night_mode">夜间模式</string>
    <string name="behavior_view_pager">behavior_view_pager</string>


    <!--Fragments  name-->
    <string name="zhi_hu_daily">知乎日常</string>
    <string name="dou_ban_momment">豆瓣一刻</string>
    <string name="guo_ke">果壳精选</string>
    <string name="fell_lucky">随便看看</string>
    <string name="no_text">未显示</string>


    <string name="loading_more">加载中...</string>

</resources>
